<resources>
    <string name="app_name">RoutesApp</string>
    <string name="new_language_text">New language text</string>
    <string name="loading_data">Loading Data</string>
    <string name="register_success">Register Successfully</string>
    <string name="edited_success">Edited Successfully</string>
    <string name="field_empty">Field Empty</string>
    <string name="unknown_Error">An Error unknown error occurred</string>

    <!-- Register user -->
    <string name="reg_hint_name">Name</string>
    <string name="reg_hint_email">Email</string>
    <string name="reg_hint_password">Password</string>
    <string name="reg_hint_confirm_password">Confirm Password</string>
    <string name="reg_val_name">Name is required</string>
    <string name="reg_val_email">Email is required</string>
    <string name="reg_val_password">Password is required</string>
    <string name="reg_val_confirm_password">Confirm Password is required</string>
    <string name="reg_val_incorrect_passwords">Password do not match</string>
    <string name="reg_registration">Sign up</string>
    <string name="reg_login">Login</string>
    <string name="reg_txt_others">Or register using</string>
    <string name="reg_txt_login">Already have an account?</string>
    <string name="reg_vm_valid_email">The Email is being used in another account</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Startup page  -->
    <string name="txt_login">You don\'t have an account yet?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="log_txt_others">Or login using</string>
    <string name="name_app">RoutesApp</string>
    <string name="tv_welcome">Welcome back!</string>
    <string name="btn_sign_outd">Sign Out</string>

    <!-- Home Fragment -->
    <string name="give_the_app_precise_location_permissions">To use this functionality, please give the app precise location permissions</string>
    <string name="access_location_permission">Access location permission</string>
    <string name="allow_get_precise_location_permission">Please allow the app to get precise location permission</string>
    <string name="allow">Allow</string>
    <string name="turn_on_location">Please turn on location</string>
    <string name="setting_marker_to_current_location">Setting the marker to your current location</string>

    <!--  Login messages  -->
    <string name="login_email_empty">Email with invalid format</string>
    <string name="login_password_empty">Empty password</string>
    <string name="login_success">Login Successfully</string>

    <!-- Main Menu -->
    <string name="home">Home</string>
    <string name="locations">Locations</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="routes">Routes</string>
    <string name="tour_points">Tour Points</string>

    <!-- Pick City   -->
    <string name="choose_your_city">Choose your city</string>
    <string name="search_hint">Search for cities or countries</string>
    <string name="welcome_to">Welcome to</string>

    <!-- Settings -->
    <string name="current_city">Current City</string>
    <string name="logout">Logout</string>
    <string name="city_not_set_yet">Not set yet</string>

    <!-- App Bar -->
    <string name="filter">Filter</string>

    <!--  Phone Verification  -->
    <string name="reg_val_phone">phone number</string>
    <string name="reg_val_add_phone">Please add your phone number</string>
    <string name="reg_val_add_code">Please add code</string>
    <string name="reg_val_verify_code">The code must have 6 digits</string>
    <string name="reg_val_verify_phone">The phone number must have at least 4 digits</string>
    <string name="reg_verify">Verify</string>
    <string name="reg_val_phone_code_verification">The code does not match</string>
    <string name="reg_val_phone_code_verification_no_code_enter">No code was entered</string>
    <string name="reg_val_phone_code_forwarded">The code was forwarded</string>
    <string name="reg_val_verification_alert_title">Please enter code</string>
    <string name="reg_val_verification_code_required">Code is required.</string>
    <string name="reg_val_code">Code</string>
    <string name="reg_val_cancel">Cancel</string>
    <string name="reg_val_resend">Resend</string>

    <!-- Routes page -->
    <string name="search_route_hint">Search</string>
    <string name="show_all">Show All</string>
    <string name="by_category">By Category</string>

    <!-- Search origin and destination-->
    <string name="search_origin_destination_hint">Search places</string>
    <string name="select_an_origin">Select an Origin</string>
    <string name="select_a_destination">Select a Destination</string>
    <string name="search_places">Search places</string>
    <string name="done">Done</string>
    <string name="go_next_step">Done, now you can go to the next step</string>

    <!-- Route Selected -->
    <string name="start_of_route">Start of route</string>
    <string name="end_of_route">end of route</string>
    <string name="bus_stop">Bus Stop</string>

    <string name="recommended"> (recommended)</string>
    <string name="route">Route</string>
    <string name="minute">%d min</string>
    <string name="calculating_route">Calculating routes …</string>
    <!-- Select route dialog -->
    <string name="select_route">Select route</string>
    <string name="no_route">No route found</string>
    <string name="see_details">See route detail</string>
    <string name="destination">Destination:</string>
    <string name="walk_to_next_stop">Walk to next stop</string>
    <string name="walk_to_first_stop">Walk from origin to stop</string>
    <string name="walk_to_destination">Walk from stop to destination</string>
    <string name="meters">%d meters</string>

    <!-- Alerts Dialog -->
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="sure_remove_fav_dest">Are you sure you want to remove the favorite destination</string>
    <string name="remove_fav_dest">Remove Favorite destination</string>
    <string name="save_dest">Save Destination</string>
    <string name="choose_name_for_new_fav_dest">Please choose a name for save these coordinates as a favorite destination</string>
    <string name="write_name">Write a name</string>

    <!-- Setting Button -->
    <string name="disable_enable_tourpoints">Disable/Enable tourpoints</string>
    <!--  Favorites List  -->
    <string name="edit_favorite_destination">Edit favorite Destination</string>
    <string name="set_a_new_name_for_this_fav_dest">Please set a new name for "%s"</string>
    <string name="are_you_sure_you_want_to_remove_this_fav_dest">Are you sure you want to remove the favorite destination %s?</string>
    <string name="fav_dest_created_at">Created at: %s</string>
    <string name="new_name">New Name</string>
    <string name="search_favorites">Search Favorites</string>
    <string name="there_are_no_favorites_yet">There are no favorites yet</string>
    <string name="address">Address:&#160;</string>
    <string name="search_best_route">Search best route</string>
    <string name="preselected_destination">Pre-Selected Destination:</string>

    <!-- Lines Administration Page -->
    <string name="linesa_title">Lines Administration</string>
    <string name="linesa_btn_edit">Edit Line</string>
    <string name="linesa_btn_edit_routes">Edit line routes</string>
    <string name="linesa_btn_save">Save Line</string>
    <string name="linesa_text_cat">Select Category</string>
    <string name="linesa_text_city">Select City</string>
    <string name="linesa_switch_enable">Enable Line</string>
    <string name="sure_remove_line">Are you sure you want to remove the line %s?</string>
    <string name="remove_line">Remove Line</string>
    <string name="select_option">Select an option</string>

    <!-- Routes Administration Page-->
    <string name="routes_admin_title">Routes Administration</string>
    <string name="route_points">Route points: %d</string>
    <string name="route_details">Route details</string>
    <string name="route_name_hint">Route name</string>
    <string name="route_velocity_hint">Average velocity (meters per sec)</string>
    <string name="go_to_map_editor">Go to map editor</string>
    <string name="see_route_details">See route details</string>
    <string name="choose_color">Choose color</string>
    <string name="route_info_updated">Route information has been updated</string>
    <string name="route_name_error">Name has to be at least 5 characters</string>
    <string name="velocity_greater_than_zero">Velocity must be greater than zero</string>
    <string name="velocity_format_error">Must be a number</string>
    <string name="remove_route">Remove route</string>
    <string name="sure_remove_route">Are you sure you want to remove the route %s?</string>

    <!-- Route Editor texts-->
    <string name="sort_label">Sort</string>
    <string name="add_remove_stops">Add or remove stops</string>
    <string name="add_remove_points">Add or remove points</string>
    <string name="rearrange_points">Rearrange selected point</string>
    <string name="points_updated">Route points have been updated</string>
    <string name="empty_route_error">Route has to have at least two points</string>
    <string name="button_route_editor">Go to route editor</string>

    <!-- Users Promotion -->
    <string name="user_promotion_title">Users Promotion page</string>
    <string name="button_user_promote">Go to User\'s permission</string>
    <string name="promote_user">Promote User to Administrator</string>
    <string name="sure_promote_user">Are you sure you want to promote the user "%s"</string>
    <string name="revoke_user">Revoke permission for Administrator</string>
    <string name="sure_revoke_user">Are you sure you want to revoke the permissions for "%s"</string>
    <string name="succes_result_user">Permissions updated successfully</string>

    <!--  Admin Module  -->
    <string name="admin_module">Admin module</string>
    <string name="cities_admin">cities admin</string>
    <string name="lines_admin">Lines Admin</string>
    <string name="go_to_route_editor">Go to route editor</string>
    <string name="btn_edit_city">Edit City</string>
    <string name="city_btn_save">Save City</string>
    <string name="remove_city">Remove City</string>
    <string name="sure_remove_city">Are you sure you want to remove the city?</string>
    <string name="hint_lat">Latitude</string>
    <string name="hintlng">Longitude</string>
    <string name="missing">Missing parameter</string>
</resources>