<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adminfragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.adminPages.AdminFragment">

    <Button
        android:id="@+id/btn_lines_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lines_admin"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginHorizontal="15sp"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_route_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_route_editor"
        app:layout_constraintTop_toBottomOf="@+id/btn_lines_admin"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginHorizontal="15sp"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_user_promote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_user_promote"
        app:layout_constraintTop_toBottomOf="@+id/btn_route_editor"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginHorizontal="15sp"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cities_admin"
        app:layout_constraintTop_toBottomOf="@+id/btn_user_promote"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginHorizontal="15sp"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>