<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="18dp"
    android:paddingVertical="16dp"
    tools:context=".ui.adminPages.lines.view.LinesAdminDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:padding="8dp"
                android:hint="@string/reg_hint_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:text="@string/linesa_text_cat" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:ems="10"
                android:padding="8dp"
                android:hint="@string/reg_hint_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <Spinner
                    android:id="@+id/sp_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:text="@string/linesa_text_city" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:ems="10"
                android:padding="8dp"
                android:hint="@string/reg_hint_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <Spinner
                    android:id="@+id/sp_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog" />

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/pb_reg_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                android:minHeight="50dp"
                android:layout_gravity="center"
                android:minWidth="200dp" />

            <Switch
                android:id="@+id/sw_enable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/linesa_switch_enable" />

            <TextView
                android:id="@+id/txt_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="8dp"
                android:textStyle="normal"
                android:textColor="@color/red_color"
                android:visibility="gone"
                android:gravity="left" />

            <Button
                android:id="@+id/btn_edit_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:text="@string/linesa_btn_edit"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:textSize="18dp"
                android:textColor="@color/white"
                style="@style/btnPrimaryRounded"
                android:backgroundTint="@color/color_primary" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:textSize="18dp"
                android:textColor="@color/white"
                style="@style/btnPrimaryRounded"
                android:backgroundTint="@color/color_primary" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>