<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="18dp"
    android:paddingVertical="16dp"
    tools:context=".ui.auth.registerUser.view.RegisterUserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:padding="8dp"
                android:hint="@string/reg_hint_name"
                app:startIconDrawable="@drawable/ic_account_circle_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_reg_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:ems="10"
                android:padding="8dp"
                android:hint="@string/reg_hint_email"
                app:startIconDrawable="@drawable/ic_email_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:ems="10"
                android:padding="8dp"
                android:hint="@string/reg_hint_password"
                app:startIconDrawable="@drawable/ic_lock_24"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_reg_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:text="@string/reg_registration"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:textSize="18dp"
                android:textColor="@color/white"
                style="@style/btnPrimaryRounded"
                android:backgroundTint="@color/color_primary" />

            <Button
                android:id="@+id/btn_reg_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/reg_login"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:textSize="18dp"
                android:textColor="@color/white"
                style="@style/btnPrimaryRounded"
                android:backgroundTint="@color/color_primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/reg_txt_others"
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="center" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>