<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingHorizontal="18dp"
android:paddingVertical="16dp"
tools:context=".ui.auth.phoneAuthentication.view.PhoneAuthenticationFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/reg_val_add_phone"
            android:textSize="18dp"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:ccp_autoDetectLanguage="true"
                android:paddingTop="12dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_rememberLastSelection="true" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_val_phone"
                app:startIconDrawable="@drawable/ic_baseline_local_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_reg_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="15"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red_color"
            android:textSize="16sp"
            android:textStyle="normal"

            />
        <Button
            android:id="@+id/btn_reg_verify_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/reg_verify"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:textSize="18dp"
            android:textColor="@color/white"
            style="@style/btnPrimaryRounded"
            android:backgroundTint="@color/color_primary" />

    </LinearLayout>

</ScrollView>

</LinearLayout>